Fix for CAE-256 Comment actions buttons always visible - IE issue

--- a/src/stylesheets/livefyre_widget_overrides.scss
+++ b/src/stylesheets/livefyre_widget_overrides.scss
@@ -1112,6 +1112,7 @@ $ftLinkHover: oColorsGetPaletteColor(black);
 	&.o-comments--comment-layout-main {
 		.fyre .fyre-comment-actions {
 			opacity: 1;
+			filter: alpha(opacity=100);
 		}
 	}
 
